feat: add base do richtext jodit

--- a/src/web/index.html
+++ b/src/web/index.html
@@ -5,6 +5,18 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite + React + TS</title>
+
+    <style>
+      .jodit_theme_summer {
+        --jd-color-background-default: #417505;
+        --jd-color-border: #474025;
+        --jd-color-panel: #5fd3a2;
+        --jd-color-icon: #8b572a;
+      }
+    </style>
+
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/jodit@latest/build/jodit.min.css">
+    <script src="https://cdn.jsdelivr.net/npm/jodit@latest/build/jodit.min.js"></script>
   </head>
   <body>
     <div id="root"></div>
